Update versions for java and plugins