@@ -8,7 +8,7 @@
   <artifactId>haze</artifactId>
   <version>2.0.1-SNAPSHOT</version>
   <properties>
-    <maven.compiler.release>19</maven.compiler.release>
+    <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <sonar.organization>fungover</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -51,13 +51,13 @@
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
-      <version>4.3.1</version>
+      <version>5.1.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
-      <version>1.17.6</version>
+      <version>1.19.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -79,11 +79,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
-        <configuration>
-          <compilerArgs>
-            --enable-preview
-          </compilerArgs>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -148,7 +143,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.0.0-M9</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <goals>
@@ -157,14 +152,11 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <argLine>@{argLine} --enable-preview</argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.11</version>
         <executions>
           <execution>
             <id>prepare-agent</id>
@@ -188,13 +180,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M9</version>
+        <version>3.2.5</version>
         <configuration>
           <environmentVariables>
             <HAZE_PORT>6380</HAZE_PORT>
             <HAZE_PASSWORD>12345</HAZE_PASSWORD>
           </environmentVariables>
-          <argLine>@{argLine} --enable-preview</argLine>
         </configuration>
       </plugin>
     </plugins>
